Update incomplete gamma function

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 2.8.6 (2016-07-06):
+	* Update incomplete gamma function
+
 Version 2.8.5 (2016-06-22):
 	* New integrals <r^2 i|j> and <r^4 i|j>
 
