--- a/README
+++ b/README
@@ -128,6 +128,7 @@ Installation
 * Prerequisites
     - BLAS library
     - Python version 2.5 or higher (optional, for make test)
+    - Numpy (optional, for make test)
     - clisp / SBCL (optional, for common lisp script)
 
 * Build libcint
