--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 2.8.8 (2016-10-13):
+	* Use float128 for high order rys_roots
+
 Version 2.8.6 (2016-07-06):
 	* Update incomplete gamma function
 
