--- a/README
+++ b/README
@@ -133,12 +133,12 @@ Installation
 
 * Build libcint
     mkdir build; cd build
-    cmake ..
+    cmake [-DCMAKE_INSTALL_PREFIX:PATH=<INSTALL_DIR>] ..
     make install
 
 * Build libcint with examples and full or abridged tests (optional)
     mkdir build; cd build
-    cmake -DENABLE_EXAMPLE=1 [-DQUICK_TEST=1] ..
+    cmake -DENABLE_EXAMPLE=1 -DENABLE_TEST=1 [-DQUICK_TEST=1] ..
     make
     make test ARGS=-V
 
