--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 2.8.10 (2017-02-22):
+	* New 2e integrals (pi dot pj|kl),  (pi dot pj|pk dot pl)
+
 Version 2.8.9 (2017-01-09):
 	* New 3c2e integral (pi dot pj|k)
 
