Add new integral

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 2.8.12 (2017-03-07):
+	* New 2e integral (ij|pk dot pl)
+
 Version 2.8.11 (2017-03-06):
 	* New 1e integral <pi |Vnuc| dot pj>
 
