--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 2.8.13 (2017-05-13):
+	* Bugfix for range-separated ssss type integral;
+	* Bugfix for quad-prec gamma_inc function in rys_roots.
+
 Version 2.8.12 (2017-03-07):
 	* New 2e integral (ij|pk dot pl)
 
