--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 2.8.14 (2017-05-22):
+	* Improved R_qnode convergence
+
 Version 2.8.13 (2017-05-13):
 	* Bugfix for range-separated ssss type integral;
 	* Bugfix for quad-prec gamma_inc function in rys_roots.
