--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 2.8.16 (2017-05-29):
+	* Add 4-center 1-electron overlap integral
+
 Version 2.8.15 (2017-05-22):
 	* Improved R_qnode convergence
 
