--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+Version 3.0.2  (2017-10-02):
+	* Update root-finding code in rys_roots
 Version 3.0.1  (2017-09-27):
 	* Fix typo in rys_roots output message
 Version 3.0.0  (2017-09-20):
