--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+Version 3.0.4  (2017-10-??):
+	* Add Gaussian type geminal Coulomb integral
 Version 3.0.3  (2017-10-04):
 	* Fix the long double precision issue in rys_roots for armv7
 Version 3.0.2  (2017-10-02):
