--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+Version 3.0.5  (2017-12-11):
+	* Use cmake policy for OSX rpath
 Version 3.0.4  (2017-10-07):
 	* Update tests to pass ppc64 architecture
 Version 3.0.3  (2017-10-04):
