--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+Version 3.0.8  (2017-02-14):
+	* Fix Fortran APIs
 Version 3.0.7  (2017-01-15):
 	* Add 3-center SOC integrals
 Version 3.0.6  (2017-12-20):
