--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+Version 3.0.9  (2017-03-08):
+	* New integrals (i |nabla j) and  -1/2 *(i | nabla^2 j)
 Version 3.0.8  (2017-02-14):
 	* Fix Fortran APIs
 Version 3.0.7  (2017-01-15):
