--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 3.0.12  (2018-05-01):
+	* New integrals < sigma dot p i | r | sigma dot p j >
+	* Fix the undefined int64_t type in Fortran interface
 Version 3.0.11  (2018-03-23):
 	* Fix breit integrals
 Version 3.0.10  (2018-03-20):
