--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+Version 3.0.13  (2018-06-11):
+	* New integral < | r r r r | >
 Version 3.0.12  (2018-05-01):
 	* New integrals < sigma dot p i | r | sigma dot p j >
 	* Fix the undefined int64_t type in Fortran interface
