--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 3.0.14  (2018-11-22):
+	* F12 derivative integrals
+	* New 2c2e integral ( nabla nabla i | j )
 Version 3.0.13  (2018-06-11):
 	* New integral < | r r r r | >
 Version 3.0.12  (2018-05-01):
