--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+Version 3.0.15  (2018-?-?):
+	* F12 second derivatives
 Version 3.0.14  (2018-11-22):
 	* F12 derivative integrals
 	* New 2c2e integral ( nabla nabla i | j )
