--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
-Version 3.0.15  (2018-?-?):
+Version 3.0.15  (2019-?-?):
 	* F12 second derivatives
+	* Add integrals for Gaussian type geminals
 Version 3.0.14  (2018-11-22):
 	* F12 derivative integrals
 	* New 2c2e integral ( nabla nabla i | j )
