--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+Version 3.0.16  (2019-03-23):
+	* New 2nd order 3c2e integral ( i j | nabla nabla k )
 Version 3.0.15  (2019-03-18):
 	* F12 second derivatives
 	* Add integrals for Gaussian type geminals
