--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+Version 3.0.20  (2020-05-13):
+	* Fix integral ggkin
 Version 3.0.19  (2019-11-30):
 	* support fractional nuclear charges
 Version 3.0.18  (2019-07-02):
