--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+Version 3.1.1  (2020-08-25):
+	* Fix bug in (py, pz, px) order
 Version 3.1.0  (2020-08-25):
 	* Add convention py, pz, px
 Version 3.0.20  (2020-05-13):
