--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 libcint
 =======
 
-version 4.0.0
+version 4.0.1
 2020-09-23
 
 
@@ -177,6 +177,19 @@ function_name(double *out, int *dims, int *shls, int *atm, int natm, int *bas, i
 Known problems
 --------------
 
+* Integral errors
+  - Relative errors for regular ERIs are around 1e-12 and less.
+  - Errors for short-range part of attenuated Coulomb interactions are generally
+    larger than regular ERIs. Depending on the range-separation parameter,
+    relative errors can reach 1e-10. However, comparing to computing integrals
+    via "regular ERI - long-range ERI", errors are roughly one order of
+    magnitude better.
+  - Small integrals (< 1e-18 by default) are set to 0. If they are used in
+    Schwarz inequality to estimate upper limit of an integral, the default
+    integral cutoff might not be accurate enough. It can be adjusted by the
+    parameter env[PTR_EXPCUTOFF] (since libcint 4.0). This parameter needs to be
+    set to log(cutoff_threshold).
+
 * On 64-bit system, "make test" stop with error:
 
     MKL FATAL ERROR: Cannot load libmkl_avx.so or libmkl_def.so.
@@ -189,10 +202,10 @@ Known problems
 * For basic ERIs, the code can handle highest angular momentum up to 7
   (present Rys-roots functions might be numerically unstable for
   nroots > 10 or l > 5).  But it has to be reduced to 5 or less for
-  derivative or high order ERI.  Depending on the derivative order,
-  reduce 1 highest angular momentum every 4 derivative order.
+  derivative or high order ERIs.  For every 4 derivative order,
+  reduce 1 highest angular momentum for each shell.
 
-* Using SSE3 instructions can increase the performance 5 ~ 50%.
+* SIMD instructions can increase performance 5 ~ 50%.
   Please refer to *qcint* library (under GPL v3 license)
 
         https://github.com/sunqm/qcint.git
