--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+Version 4.0.1  (2020-10-02):
+	* Update docs
 Version 4.0.0  (2020-09-23):
 	* API Change. PTR_LIGHT_SPEED is replaced with PTR_EXPCUTOFF.
 	  Integral screening parameter can be passed through env[PTR_EXPCUTOFF]
