--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+Version 4.0.2  (2020-10-03):
+	* Fix typedef Function in cint_funcs.h
 Version 4.0.1  (2020-10-02):
 	* Update docs
 Version 4.0.0  (2020-09-23):
