--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 4.0.3  (2020-10-27):
+	* Fix memory allocation in int3c1e
+	* Improve macro MALLOC_INSTACK
 Version 4.0.2  (2020-10-03):
 	* Fix typedef Function in cint_funcs.h
 Version 4.0.1  (2020-10-02):
