--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+Version 4.0.6  (2020-11-13):
+	* Fix return value bug in rysroots
 Version 4.0.5  (2020-10-30):
 	* Fix prescreening bug in int3c2e
 Version 4.0.4  (2020-10-29):
