--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+Version 4.1.3  (2021-04-13):
+	* Fix memory address int32 overflow for heavily contracted basis
 Version 4.1.2  (2021-04-10):
 	* Fix a bug due to significant digits of float128 in the core Fmt integrals
 Version 4.1.1  (2021-03-21):
