--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+Version 4.2.0  (2021-04-15):
+	* Change for all integral functions the return type from int to size_t
 Version 4.1.3  (2021-04-13):
 	* Fix memory address int32 overflow for heavily contracted basis
 Version 4.1.2  (2021-04-10):
