--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+Version 4.4.6  (2021-09-27):
+	* Fix uninitialized variables in rys_roots
 Version 4.4.4  (2021-08-07):
 	* Fix Cartesian-spherical and Cartesian-spinor transformation coefficients
 Version 4.4.3  (2021-07-22):
