--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 5.1.6  (2022-08-26):
+	* Add 4-center 1-electron intergral int4c1e
+
 Version 5.1.5  (2022-08-24):
 	* New integral int3c1e_ip1
 
