--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
+Version 5.1.7  (2022-12-06):
+	* Boundary check when initializing CINTOpt
+
 Version 5.1.6  (2022-08-26):
 	* Add 4-center 1-electron intergral int4c1e
-	* Boundary check when initializing CINTOpt
 
 Version 5.1.5  (2022-08-24):
 	* New integral int3c1e_ip1
