--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 5.1.9  (2023-01-09):
+	* Fix approx_log bug for non-x86 architecture
+
 Version 5.1.8  (2023-01-03):
 	* Fix integer overflow error in cintopt initialization
 
