--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 5.2.0  (2023-01-31):
+	* Optimize SR-ERI integral screen
+
 Version 5.1.9  (2023-01-09):
 	* Fix approx_log bug for non-x86 architecture
 
