--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 5.2.1  (2023-01-31):
+	* Improve error handling for SR-ERI integrals
+
 Version 5.2.0  (2023-01-31):
 	* Optimize SR-ERI integral screening
 
