--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 5.4.0 (2023-07-04):
+	* Add constant PTR_FRAC_CHARGE for QM/MM interface in pyscf
+
 Version 5.3.0  (2023-03-28):
 	* Improves rys-roots numerical stability in the near-zero limit
 
